--- a/src/app/frm-menu/frm-menu.component.html
+++ b/src/app/frm-menu/frm-menu.component.html
@@ -5,10 +5,20 @@
     [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="#" class="alinhaicon">
+        <mat-icon>business</mat-icon>
+        <span>Empresa</span>
+      </a>
+      <a mat-list-item href="#" class="alinhaicon">
+        <mat-icon>person</mat-icon>
+        <span>Usuário</span>
+      </a>
+      <a mat-list-item href="#" class="alinhaicon">
+        <mat-icon>account_circle</mat-icon>
+        <span>Perfil</span>
+      </a>
     </mat-nav-list>
+
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
